# lab-central-webapp

./: ._gitignore  .gitignore  Makefile  README.md  README_kedro.md  change-my-values.yaml  core.html  create-repository.py  index.html  kedro-answers.yml  pyproject.toml  search.json  settings.ini  sitemap.xml
_proc/: index.ipynb
_proc/_docs/: robots.txt
app/: Hello.py
app/pages/: 1_Connect_Peak_To_Gene.py  2_Integrate_Peak_Data.py
conf/base/: logging.yml
data/00_intake_catalogs/: outside_data_ChIP.yaml
docs/source/: conf.py  index.rst
notebooks/analyses/genetic_compensation_temp/: Untitled.ipynb
notebooks/package/: 00_core.ipynb  index.ipynb  nbdev.yml
notebooks/package/ChIP_peaks_merge/: all_control_peak_list_proportions_df.tsv  intake_datasets.ipynb  peak_processing.ipynb  test.yaml
notebooks/package/ChIP_peaks_merge/.ipynb_checkpoints/: intake_datasets-checkpoint.ipynb
notebooks/package/job_runners/: LSF_job_runner.ipynb
notebooks/package/peak_operations/: peak_operations.ipynb
notebooks/package/peak_to_gene/: connect_peak_to_gene.ipynb  gene_targets_funcs.py  test.yaml  test_NAC_high_kmeans_pval_11.tsv
src/: setup.py
src/lab_central_webapp/: __init__.py  __main__.py  _modidx.py  core.py  settings.py
src/tests/: test_run.py
