
[tool.poetry]
name = "lab-central-webapp"
version = "0.1.0"
description = "Main webapp for common lab pipelines and sub-webapps"
authors = ["anhoang@wi.mit.edu"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "lab_central_webapp"
project_name = "Lab central webapp"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

